# inkwell-ruscal

./: .gitignore  Cargo.toml  README.md  mandel.c  mandel.rs  test.rscl  var.rscl
scripts/: assign.rscl  cond.rscl  fn_call.rscl  fn_var.rscl  for.rscl  if-else-chain.rscl  loop_assign.rscl  mandel.rscl  mandel_highres.rscl  minmax.rscl  return.rscl  var.rscl
src/: compiler.rs  main.rs  parser.rs
